--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,6 @@
 
 
 
-body{
-  overflow-x: hidden;
-}
-
 .back-to-top {
   position: fixed;
   display: none;
@@ -122,7 +118,7 @@ body{
 .logo img {
   margin:0;
  padding:0;
-
+ display: block;
  max-height: 46px;
 
   
@@ -208,7 +204,7 @@ body{
 }
 
 .navbar .dropdown ul li {
- max-width: 200px;
+  min-width: 200px;
 
 }
 
@@ -401,11 +397,10 @@ body{
   background-size: cover;
   height: 100vh;
   background-position: center;
-min-width: 100%;
-display: block;
+
   box-sizing: border-box;
  width: 100%;
-
+  min-height: 100vh;
 
   
 
@@ -545,30 +540,23 @@ visibility: visible;
 
 #about-me{
 
- 
-  max-width: 100%;
+  height: 100vh;
+  font-family:'Times New Roman', Times, serif;
 
 }
 
-#about-me{
- padding:0rem;
- margin:1rem;
-}
 
+#about-me .container{
 
-@media (max-width: 620px) {
- #about-me img {
-  max-width: 380px;
- 
-  }
+ margin-top: 370px;
+
 }
 
 /* About Me 
 ---------------------*/
 @media (max-width: 991px) {
   .about-text {
-  
-
+    margin-top: 40px;
   }
 }
 #about-me .about-text h3 {
@@ -578,7 +566,7 @@ visibility: visible;
 }
 @media (max-width: 767px) {
   .about-text h3 {
-    font-size: 25px;
+    font-size: 35px;
   }
 }
 #about-me .about-text h4 {
@@ -905,11 +893,8 @@ visibility: visible;
 /*creative banner starts here*/
 #creation-top {
   background-color: var(--dark);
-max-width: 100%;
-width: 100%;
+
   height: 100vh;
-  overflow-x: hidden;
-  overflow-x: hidden;
 }
 
 
